--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           pip install pytest
           pip install pytest-cov
-          pytest --cov=BAE --cov-report=xml
+          pytest --cov=eeg_augmentation_benchmark --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
